# space-pewpew

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  main.cpp  pewpew.qrc  resource.qrc
headers/: BackgroundPixmapItem.h  GameObject.h  GameScene.h  InputHandler.h  MenuButton.h  MenuScene.h  SceneMaker.h  SfxHandler.h  SpawnHandler.h  TestClass.h  background.h  backgroundmusic.h  bullet.h  enemy.h  game.h  player.h  settings.h  spacecraft.h
sources/: GameObject.cpp  GameScene.cpp  InputHandler.cpp  MenuButton.cpp  MenuScene.cpp  SfxHandler.cpp  SpawnHandler.cpp  TestClass.cpp  background.cpp  backgroundmusic.cpp  bullet.cpp  enemy.cpp  game.cpp  player.cpp  settings.cpp  spacecraft.cpp
